manager/templates/default/css/index.css
/* ... */
/* tree grid */
.tq-treegrid .tq-treegrid-col {border: none;}
.tq-treegrid .tq-treegrid-icons {float: left;}
.tq-treegrid .x-tree-node-el {line-height: 13px;padding: 1px 3px 1px 5px;}
.tq-treegrid .tq-treegrid-static .x-tree-ec-icon {display: none;}
.tq-treegrid .tq-treegrid-static .x-tree-node-el {cursor: default;}

/* superbox */
.x-superboxselect {position:relative; height: auto !important; margin: 0; width: auto !important; overflow: hidden; padding:2px; display:block; outline: none !important;}
.x-superboxselect input[disabled] {background-color: transparent;};
.x-superboxselect ul {overflow: hidden; cursor: text;}
.x-superboxselect-display-btns {padding-right: 33px !important;}
.x-superboxselect-btns {position: absolute; right: 1px; top: 0; overflow:hidden; padding:2px;}
.x-superboxselect-btns div {float: left; width: 16px; height: 16px; margin-top: 4px;}
.x-superboxselect-btn-clear {background: url(../images/restyle/icons/sb_clear.png) no-repeat scroll left 0px;}
.x-superboxselect-btn-expand {background: url(../images/restyle/icons/sb_expand.png) no-repeat scroll left 0px;}
.x-superboxselect-btn-over {background-position: left -16px}
.x-superboxselect-btn-hide {display:none;}
.x-superboxselect li {float: left; margin: 1px 1px 2px 1px; padding: 0;line-height: 18px;}
.x-superboxselect-stacked li {float: none !important;}
.x-superboxselect-input input { border: none; outline: none; margin-top: 4px; margin-bottom: 4px;}
body.ext-ie .x-superboxselect-input input {background: none; border: none; margin-top: 3px;}
.x-superboxselect-item {position: relative; -moz-border-radius: 6px; -webkit-border-radius: 6px; border-radius: 6px; o-border-radius: 6px; khtml-border-radius: 6px; border: 1px solid #CAD8F3; background-color: #DEE7F8; padding: 1px 15px 1px 5px !important; }
body.ext-ie7 .x-superboxselect-item {margin: 2px 1px 2px 1px; line-height: 1.2em; padding: 2px 17px 4px 5px !important;}
body.ext-ie6 .x-superboxselect-item {margin: 2px 1px 2px 1px; line-height: 1.2em; padding: 2px 19px 4px 5px !important;}
.x-superboxselect-item-hover {background: #BBCEF1; border: 1px solid #6D95E0;}
.x-superboxselect-item-focus {border-color: #598BEC; background: #598BEC; color: #fff;}
.x-superboxselect-item-close {background: url(../images/restyle/icons/sb_close.png) no-repeat scroll left 0px; border: none; cursor: default; font-size: 1px; height: 16px;padding:0; position: absolute; right: 0px; top: 2px; width: 13px;display:block;cursor:pointer;}
.x-superboxselect-list { font-size: 14px !important; }
.x-superboxselect-item-close:hover, .x-superboxselect-item-close:active  { background-position: left -12px;}
.x-superboxselect-item-focus .x-superboxselect-item-close{ background-position: left -24px}
.x-item-disabled .x-superboxselect-item-close{ background-position: left -36px}

/* other */
.modx-tree-load-msg {
    font-size: .9em;
    line-height: 1;
    color: #444;
    white-space: pre-line;
    padding: 3px;
}

.modx-policy-permissions-grid td {
    cursor: pointer;
}

/* dashboard stuff */
.dashboard {
    overflow: auto;
}
.dashboard-block {
    float: left;
    margin: 6px;
    background-color: white;
    border: 1px solid #ddd;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
}
.dashboard-block .body {
    max-height: 300px;
    overflow: auto;
    padding: 10px;
    height: auto;
}
.dashboard-block .title {
    background:#dddddd;
	background:-moz-linear-gradient(center bottom,#dddddd 0%,#eeeeee 100%) repeat scroll 0 0 transparent;
	background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#eeeeee),color-stop(100%,#dddddd));
	background:-webkit-linear-gradient(center bottom,#dddddd 0%,#eeeeee 100%);
	background:-o-linear-gradient(center bottom,#dddddd 0%,#eeeeee 100%);
	background:-ms-linear-gradient(center bottom,#dddddd 0%,#eeeeee 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#eeeeee,endColorstr=#dddddd,GradientType=0);
	background:linear-gradient(center bottom,#dddddd 0%,#eeeeee 100%);
	border-bottom:1px solid #ccc;
	font-size:12px;
	font-weight:bold;
	color: #5E5E5E;
	padding:10px 10px 8px;
	text-shadow:0 1px 1px #ffffff;
	-moz-border-radius-topleft:2px;
	-moz-border-radius-topright:2px;
	-webkit-border-top-left-radius:2px;
	-webkit-border-top-right-radius:2px;
	border-top-left-radius:2px;
	border-top-right-radius:2px;
	margin:0;
}
.dashboard-block-half {
    width: 48%;
}
.dashboard-block-full {
    width: 97%;
    clear: both;
    height: auto;
}
.dashboard-block-double {
    width: 97%;
    clear: both;
    height: auto;
    min-height: 400px;
}
.dashboard-block-variable .body {
    height: auto;
}

/* media sources */
.modx-leftbar-second-tb {
	padding: 6px;
	border-bottom: 1px solid #DFDFDF;
    border-top: 1px solid #FAFAFA;
}

/* MODExt common classes */

.container {  margin: 0 15px 15px 0; } /* Wrap the main content */

/* Panel description text */
.panel-desc { 
	background-color: #F7F7F7;
    border-bottom: 1px solid #E7E7E7 !important;
    color: #5A5A5A;
    line-height: 1.5;
    padding: 15px !important; 
} 
.with-title .panel-desc{
	margin: 0;
}
.panel-desc p{
	padding: 0;
}

/* All the other wrapped element (forms need to be wrapped in a panel isolated from the other components) */
.main-wrapper { padding: 15px; } 
.with-title .main-wrapper{
	padding: 0 15px 10px 15px;
}
.left-col{ padding-right: 15px; }
.right-col{ padding-left: 15px; }

/* package grid */
.x-panel-body-noheader .x-grid3-row {
    position: relative;
}
.x-grid3-cell-inner.x-grid3-col-main {
    padding: 10px 5px 35px;
}
.x-grid3-cell-inner.x-grid3-col-main h3{
	font-size: 16px;
    margin: 0 0 2px;
}
.x-grid3-cell-inner.x-grid3-col-main  .not-installed{
	color: #999999;
}
.actions {
	bottom:8px;
	margin:0;
	overflow:hidden;
	position:absolute;
}

.actions li {
	float:left;
	line-height:0.7;
	margin-right:2px;
}
/* ... */

